fix loading page icon container preventing btn clicks for mobile users, make loop and preview btns more visible, and couple style changes

--- a/src/components/LoadingPage/LoadingPage.css
+++ b/src/components/LoadingPage/LoadingPage.css
@@ -30,9 +30,11 @@
 }
 
 .lp-btn {
-  background-color: rgba(207, 216, 211, 0.932);
+  background-color: rgba(207, 216, 211, 0.75);
   height: 35px;
   border-radius: 15%;
+  border: 1px dotted yellow;
+  z-index: 10;
 }
 
 .lp-btn:hover {
